# simsTheParody

./: AmountSet.c  AmountSet.h  Apartment.c  Apartment.h  CMakeLists.txt  Date.c  Date.h  Kernel.h  List.c  List.h  OrderProduct.c  OrderProduct.h  Person.c  Person.h  Product.c  Product.h  Rational.c  Rational.h  consrtants.h  main_test_block.c  makefile  order of implementation.txt  outerCore.c  outerCore.h  set.c  set.h
Kernel/: Kernel.c  OrderProduct.c  OrderProduct.h  Person.c  Product.h  Rational.c  Rational.h  outerCore.h
Kernel/outerCore/: AmountSet.h  Date.c  Date.h  Product.c  outerCore.c
Kernel/outerCore/core/: AmountSet.c  set.c
core/: AmountSet.c  set.c
outerCore/: AmountSet.h  Date.c  Date.h  Product.c  outerCore.c
outerCore/core/: AmountSet.c  List.c  set.c  set.h
